# License-System-Solana

./: .gitignore  AGENTS.md  README.md  clippy.toml  rustfmt.toml
.devcontainer/: .dockerignore  .gitattributes  AUDIT_REPORT.md  Dockerfile  README.md  devcontainer.json
.devcontainer/scripts/: README.md  install-base-deps.sh  install-gh-cli.sh  install-node.sh  install-opencode.sh  install-rust.sh  install-solana.sh  install-surfpool.sh  post-create.sh  setup-user.sh
.github/workflows/: docker-security.yml
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs  tests.rs
crates/tui/: Cargo.toml  README.md  run-tui.sh
crates/tui/src/: main.rs
docs/: 01-prd.md  02-architecture.md  03-domain.md  04-technical-design.md  05-adrs.md  06-testing-strategy.md  07-deployment.md  08-offline-validation.md  09-solana-certification-resumen.md  CHECKLIST-TRUST-ESCROW-V2.md  COMPARISON-TRUST-WORK-ESCROW.md  Demo-Script.md  QUICK-START.md  README.md  TUI-USER-MANUAL.md  TUI-V1-VS-V2-ANALYSIS.md  WHAT-TO-COPY-FROM-TRUST-ESCROW.md  apuntes varios.md  slides.md
docs/phases/phase-1/: README.md  findings.md  phase-report.md  progress.md  task_plan.md
docs/planeacion de trabajo/: 01-epic.md  02-module.md  03-task.md  04-pr-task.md  05-pr-module.md  06-pr-final.md  07-convenciones-ramas-commits.md  08-convenciones-prs.md  README.md
license-system/: Anchor.toml  Cargo.toml
license-system/sdk/: Cargo.toml  README.md
license-system/tests/: Cargo.toml  license-system.ts  license_system.rs
license-system/tests/src/: test_initialize.rs
license-system/tui/: Cargo.toml  plans.md
(+29 files in other folders)
