[package]
name = "license-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.32.1"
anchor-lang = "0.32.1"
solana-sdk = "2.1"
solana-client = "2.1"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
