[package]
name = "license-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
anchor-client = "0.32.1"
solana-sdk = "2.1"
solana-client = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
